--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,12 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-.externalNativeBuild
 # Android Studio
 *.iml
 .gradle
-.idea
+/local.properties
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+.idea
 
 #built application files
 *.apk
@@ -30,13 +22,10 @@
 bin/
 gen/
 
-# Local configuration file (sdk path, etc)
-local.properties
-
 # Windows thumbnail db
 Thumbs.db
 
 #NDK
 obj/
 
-gradlew.bat
+/gradlew.bat
