--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".RegistrationActivity" />
         <activity
-            android:name=".MenuActivity"
+            android:name=".ui.activity.navigation.MenuActivity"
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.activity.auth.SignInActivity">
@@ -21,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.auth.SignUpActivity"></activity>
+        <activity android:name=".ui.activity.auth.SignUpActivity" />
     </application>
 
 </manifest>
