--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,28 @@ dependencies {
     compile 'com.arello-mobile:moxy-app-compat:1.5.3'
     kapt 'com.arello-mobile:moxy-compiler:1.5.3'
 
+    //Dagger core
+    implementation "com.google.dagger:dagger:2.14.1"
+    kapt "com.google.dagger:dagger-compiler:2.14.1"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.6.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+
+    // ReactiveX
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
+
+    //GSON
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    compile 'com.google.code.gson:gson:2.8.1'
+
+    //OkHttp
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.squareup.okio:okio:1.13.0'
+
     //Google Maps Services
     implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
