--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.6.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.9.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 
     // ReactiveX
@@ -61,13 +61,16 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
 
     //OkHttp
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.okio:okio:1.13.0'
 
     //Google Maps Services
     implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
+
+    //Google Directions
+    compile 'com.akexorcist:googledirectionlibrary:1.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
