--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,16 @@
 
 buildscript {
     ext.kotlin_version = '1.2.31'
+    ext.gradle_version = '3.1.1'
+    ext.google_services_version = '3.2.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:3.2.0'
+        classpath "com.google.gms:google-services:$google_services_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
