--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Support libraries
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -80,5 +80,9 @@ dependencies {
 
 kapt {
     generateStubs = true
+}
+
+androidExtensions {
+    experimental = true
 }
 apply plugin: 'com.google.gms.google-services'
