--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     implementation "com.google.dagger:dagger:2.14.1"
     kapt "com.google.dagger:dagger-compiler:2.14.1"
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    kapt 'com.github.bumptech.glide:compiler:4.7.1'
+
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
@@ -66,9 +70,9 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.13.0'
 
     //Google Maps Services
-    implementation 'com.google.android.gms:play-services-places:15.0.0'
-    implementation 'com.google.android.gms:play-services-maps:15.0.0'
-    implementation 'com.google.android.gms:play-services-location:15.0.0'
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
 
     //Google Directions
     implementation 'com.akexorcist:googledirectionlibrary:1.1.1'
