add id to group ride, create group ride details screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -27,6 +26,7 @@
         <activity android:name=".ui.activity.auth.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -44,6 +44,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.diploma.volodymyr.bicyclecity.ui.activity.groupride.CreateGroupRideActivity" />
+        </activity>
+        <activity
+            android:name=".ui.activity.groupride.GroupRideDetailsActivity"
+            android:parentActivityName=".ui.activity.navigation.MenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.diploma.volodymyr.bicyclecity.ui.activity.navigation.MenuActivity" />
         </activity>
     </application>
 
