--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,33 +26,26 @@
         <activity android:name=".ui.activity.auth.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.auth.SignUpActivity" />
         <activity
             android:name=".ui.activity.groupride.CreateGroupRideActivity"
-            android:label="@string/title_activity_create_group_ride">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.diploma.volodymyr.bicyclecity.ui.activity.navigation.MenuActivity" />
-        </activity>
+            android:label="@string/title_activity_create_group_ride"
+            android:parentActivityName=".ui.activity.navigation.MenuActivity" />
         <activity
             android:name=".ui.activity.groupride.CreateGroupRideRouteActivity"
-            android:label="@string/title_activity_create_group_ride_route">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.diploma.volodymyr.bicyclecity.ui.activity.groupride.CreateGroupRideActivity" />
-        </activity>
+            android:label="@string/title_activity_create_group_ride_route"
+            android:parentActivityName=".ui.activity.groupride.CreateGroupRideActivity" />
         <activity
             android:name=".ui.activity.groupride.GroupRideDetailsActivity"
             android:parentActivityName=".ui.activity.navigation.MenuActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.diploma.volodymyr.bicyclecity.ui.activity.navigation.MenuActivity" />
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activity.competition.CreateCompetitionActivity"
+            android:label="@string/title_activity_create_competition"
+            android:parentActivityName=".ui.activity.navigation.MenuActivity" />
     </application>
 
 </manifest>
