--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <meta-data
+            android:name="com.here.android.maps.appid"
+            android:value="@string/here_app_id" />
+        <meta-data
+            android:name="com.here.android.maps.apptoken"
+            android:value="@string/here_app_code" />
+
         <activity
             android:name=".ui.activity.navigation.MenuActivity"
             android:label="@string/title_activity_menu"
@@ -46,6 +53,10 @@
             android:name=".ui.activity.competition.CreateCompetitionActivity"
             android:label="@string/title_activity_create_competition"
             android:parentActivityName=".ui.activity.navigation.MenuActivity" />
+        <activity android:name=".ui.activity.competition.CompetitionDetailsActivity" />
+        <activity
+            android:name=".ui.activity.competition.CompetitionResultActivity"
+            android:label="@string/title_activity_competition_result" />
     </application>
 
 </manifest>
